[gd_scene load_steps=2 format=3 uid="uid://dm110q6k85bn8"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_82ugv"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_82ugv")

[node name="SituationLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="CountdownLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
